2012-07-11  Jan Kanis
  * implemented login rate limiting. Also an important security feature. 

2012-07-09  Jan Kanis
  * Harden session management: 
    - use secure randomness to initialise the session id, if available from /dev/urandom
    - set session to httponly if possible
    - set session to https if possible
    - lock the session cookie to PHP Shell's URL
    - lock session to user's IP address
    - enable an absolute timeout for the validity of the login information
    - re-generate a new session id after authentication, to prevent session fixation attacks
    - also generate a new session id after logout
  * rename 'nounce' to 'nonce', and use secure randomness for initialization. 
  * update the SECURITY file regarding the above changes. 
  * add an additional note regarding Safe Mode to the SECURITY file. 

2012-07-01  Jan Kanis
  * added support for phpass. This is (I believe) an important security improvement as it includes password stretching. 
  * Accept 'clear' command only if authenticated & CSRF token checked

2012-06-29  Jan Kanis
  * PHP Shell now implements protection against Cross-Site Request Forgery attacks (CSRF). A security critical app like this should have implemented that a long time ago. 
  * change terminal output from a <textarea> to a <pre>, so the output doesn't get sent back to the server every POST.
  * Make sure editors 'Exit without Saving' also works if javascript is disabled. 
  * Add 'logout' button to the error page so you can reset your session

2012-06-28  Jan Kanis
  * if 'execute command' is clicked while a file to upload is selected, the file is no longer uploaded. Upload and terminal are now separate forms. 
  * add clear also as a builtin.
  * Don't crash if the current directory has unreadable entries
  * fix some small bugs in the editor
  * replace htmlentities with htmlescape everywhere

2012-06-28  Jan Kanis
  * Merged changes from my private branch and trunk. Some features were already in both branches.
